# modern_cpp_patterns

./: .clang-format  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  README_docker.md
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/patterns/: sample_library.hpp
scripts/: boost-bcp.py  download_subboost.sh
src/: CMakeLists.txt  bflyweight.cpp  bflyweight.h  chain_of_resp.cpp  chain_of_resp.h  chatroom.cpp  chatroom.h  composite.cpp  composite.h  cor_broker.cpp  cor_broker.h  creational.cpp  creational.h  decorator.cpp  decorator.h  flyweight.cpp  flyweight.h  iter.cpp  iter.h  main.cpp  mediator.cpp  mediator.h  memento.cpp  memento.h  person.cpp  person.h  recursive_generator.h  soccer.cpp  soccer.h  solid.cpp  solid.h  visitor.cpp  visitor.h
test/: CMakeLists.txt  constexpr_tests.cpp  flyweight.cpp  tests.cpp
